--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ xcuserdata
 # http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
 #
 Pods/
+Podfile.lock
