BCH: - add 1Password as a login option

--- a/dreamwidth/dreamwidth/Info.plist
+++ b/dreamwidth/dreamwidth/Info.plist
@@ -24,6 +24,10 @@
 	<string>3</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>org-appextension-feature-password-management</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
