--- a/dreamwidth/dreamwidth/Info.plist
+++ b/dreamwidth/dreamwidth/Info.plist
@@ -24,6 +24,10 @@
 	<string>11</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>LSApplicationQueriesScheme</key>
+	<array>
+		<string>org-appextension-feature-password-management</string>
+	</array>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>org-appextension-feature-password-management</string>
